Add repo URL and Document

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -46,13 +46,13 @@ tags:
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: http://example.com/repository
+repository: https://github.com/hazel-shen/LINE_notify_collection
 
 # The URL to any online docs
-documentation: http://docs.example.com
+documentation: https://github.com/hazel-shen/LINE_notify_collection
 
 # The URL to the homepage of the collection/project
-homepage: http://example.com
+homepage: https://github.com/hazel-shen/LINE_notify_collection
 
 # The URL to the collection issue tracker
-issues: http://example.com/issue/tracker
+issues: https://github.com/hazel-shen/LINE_notify_collection/issues
